fix our awful broken styling. prev: calendars would overflow the div, and word-wrap wouldn't happen on smaller screens.

--- a/global.css
+++ b/global.css
@@ -28,7 +28,7 @@ a {
 .body-container {
   position: relative;
   margin: 0 auto;
-  max-width: 100em;
+  max-width: 100vw;
   min-height: 100%;
   background-color: #fff
 }
@@ -111,6 +111,7 @@ a {
   right: 0;
   flex: 1;
   padding: 3vw;
+  width: 75vw;
 }
 
 .singlecolumncontent {
@@ -230,4 +231,8 @@ a {
   .nav > #nav-check:checked {
     position: fixed;
   }
+}
+.schedule-embed {
+  width: 100%;
+  height: 500px;
 }
